samples/_failures_safe/1761177297_b7993c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c307e066.c: In function ‘main’:
./samples/SAFE/__tmp_c307e066.c:159:21: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  159 |                     print
      |                     ^~~~~
      |                     printf
./samples/SAFE/__tmp_c307e066.c:159:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c307e066.c:159:26: error: expected ‘;’ at end of input
  159 |                     print
      |                          ^
      |                          ;
./samples/SAFE/__tmp_c307e066.c:159:21: error: expected declaration or statement at end of input
  159 |                     print
      |                     ^~~~~
./samples/SAFE/__tmp_c307e066.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c307e066.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c307e066.c:159:21: error: expected declaration or statement at end of input
